fix export init; bottom spacing

--- a/static/css/editor.css
+++ b/static/css/editor.css
@@ -170,8 +170,7 @@
 
 #elltwo {
     box-sizing: border-box;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 150px;
 }
 
 #bounds {
