--- a/static/css/elltwo.css
+++ b/static/css/elltwo.css
@@ -12,7 +12,7 @@
     font-weight: 300;
     margin: 0px auto;
     padding-top: 80px;
-    padding-bottom: 200px;
+    padding-bottom: 80px;
     background-color: white;
     color: #333;
 }
